--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "emojipacks": "./bin/emojipacks"
   },
   "dependencies": {
+    "async": "^2.6.0",
     "chalk": "^1.1.0",
     "cheerio": "^0.19.0",
     "co": "^4.6.0",
